# formica

./: .gitignore  Dockerfile  FOLLOWUPS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  gpu-smoke.yml
athena/: agent_lifecycle.sql  pheromone_history.sql  recent_errors.sql  validation_outcomes.sql
deploy/compose/: .env.example  docker-compose.yml
deploy/fluent-bit/: fluent-bit.yaml  kustomization.yaml
deploy/otel-collector/: collector.yaml  config.dev.yaml
deploy/terraform/: iam.tf  main.tf  outputs.tf  variables.tf
docs/: architecture.md  capacity.md  demo.md  launch-on-aws.md  local-gpu-dev.md  observability.md  pheromones.md  port-notes.md  references.md  single-box.md
docs/decisions/: 0001-stigmergy-over-hierarchy.md  0002-otel-to-s3.md  0003-fluent-bit-cloudwatch.md  0004-terraform-env-region.md  0005-click-cli.md  0006-no-capacity-provisioning.md  0007-open-weight-default.md  0008-k8s-only-single-box-first-class.md  0009-switch-default-to-qwen25.md
formica/: __init__.py  api.py  cli.py  config.py
formica/agents/: __init__.py  base.py  entrypoint.py  forager.py  gc.py  scout.py  validator.py
formica/blackboard/: __init__.py  cypher.py  forum.py  models.py
formica/capacity/: __init__.py  headroom.py  pools.py
formica/coordinator/: __init__.py  anternet.py  controller.py  main.py  phases.py
formica/pheromones/: __init__.py  constants.py  decay.py  sampler.py
formica/telemetry/: __init__.py  logs.py  otel.py
formica/tools/: __init__.py  aws_exec.py  llm.py  web.py
scripts/: launch-single-box.sh
(+39 files in other folders)
