[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formica"
version = "0.1.0"
description = "Stigmergic, ant-colony-inspired multi-agent problem-solving platform"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "neo4j>=5.0",
    "kubernetes>=31.0",
    "click>=8.1",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "opentelemetry-instrumentation>=0.48b0",
    "boto3>=1.35",
    "watchtower>=3.3",
    "structlog>=24.0",
]

[project.optional-dependencies]
openai = ["strands-agents[openai]"]
ollama = ["strands-agents[ollama]"]
bedrock = ["strands-agents[bedrock]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8", "httpx", "testcontainers>=4.0"]
all = ["formica[openai,ollama,bedrock,dev]"]

[project.scripts]
formica = "formica.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["formica"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 120
